<resources>
	<string name="hello">BenderAnd</string>
	<string name="app_name">BENDERAnd</string>
	<string-array name="periodos_array">
		<item>Hoy</item>
		<item>Este mes</item>
		<item>Este año</item>
	</string-array>
	<string name="lblNoExistenItems">No Existen Items</string>
	<string name="menu_delete">Borrar</string>
	<string name="menu_insert">Agregar nuevo</string>
	<string name="menu_modificar">Modificar</string>
	<string name="menu_update">Guardar</string>
	<string name="menu_revert">Revertir</string>
	<string name="menu_discard">Descartar</string>
	<string name="resolve_edit">Editar producto</string>
	<string name="stringtvescanear_codigo">Escanear Codigo</string>
	<string name="stringbtnfoto">Foto</string>
	<string name="stringbtnescan">Escanear</string>
	<string name="title_create">Crear Producto</string>
	<string name="title_edit">Editar producto</string>
	<string name="title_notes_list">Note pad</string>
	<string name="title_Editor">Ingrese su Producto</string>
	<string name="title_edit_title">Note title:</string>
	<string name="live_folder_name">Notes</string>
	<string name="button_ok">OK</string>
	<string name="error_title">Error</string>
	<string name="error_message">Error loading note</string>
	<string name="AUTHORITY">base</string>
	<string name="title_pos">Pos</string>
	<string name="btninterno">Interno</string>
	<string name="btnlocal">Red local</string>
	<string name="btnonline">Online</string>
	<string name="lblTotal">"Total: "</string>
	<string name="btnPagar">Pagar</string>
	<string name="btnCobrar">Cobrar</string>
	<string name="btnLimpiar">Limpiar</string>
	<string name="btnAgregar">Agregar articulo</string>
	<string name="lblbuscar">Buscar</string>
	<string name="btnscan">Scan</string>
	<string name="sample_device_admin">Scan</string>
	<string name="sample_device_admin_description">Scan</string>
	<string name="lbllacantidadexcedeelinventarioregistrado">La cantidad excede el inventario registrado</string>
	<string name="lblseleccioneunacantidad">Seleccione una cantidad</string>
	<string name="lblagregueunacantidad">Agregue una cantidad</string>
	<string name="lbldebesingresarunnumero">Debes ingresar un numero</string>
	<string name="lbldebesingresarunrut">Debes ingresar un rut</string>
	<string name="lbldebesingresarunrol">Debes ingresar un rol</string>
	<string name="lbldebesingresarunnombre">Debes ingresar un nombre</string>
	<string name="lbldebesingresarunprecio">Debes ingresar un precio</string>
	<string name="lbldebesingresaruntelefono">Debes ingresar un telefono</string>
	<string name="lblestasegurodecancelarestaventa">Esta seguro de Cancelar esta venta</string>
	<string name="lblcancelarventa">Cancelar venta</string>
	<string name="lblestasegurodecancelarestacompra">Esta seguro de Cancelar esta compra</string>
	<string name="lblcancelarcompra">Cancelar copmpra</string>
	<string name="lblopciones">Opciones</string>
	<string name="lblcantidad">Cantidad</string>
	<string name="lbldescripcion">Descripción</string>
	<string name="lblunitario">Unitario</string>
	<string name="lblimpuesto">Impuesto</string>
	<string name="lblsubtotal">Subtotal</string>
	<string name="lblpagocon">Pago con</string>
	<string name="lblVuelto">Vuelto</string>
	<string name="lblseleccione">Seleccione</string>
	<string name="lblObteniendodatos">Obteniendo datos ....</string>
	<string name="lblPorfavorespere">Por favor espere</string>
	<string name="lblusuario">Usuario</string>
	<string name="lblclave">Clave</string>
	<string name="lblEntrar">Ingresar</string>
	<string name="lblnotengocuenta">No tengo cuenta</string>
	<string name="lblok">OK</string>
	<string name="lblroldocumento">Rol Documento</string>
	<string name="lblrutproveedor">Rut Proveedor</string>
	<string name="lblnombreproveedor">Proveedor</string>
	<string name="lbltelefonoproveedor">Telefono</string>
	<string name="lblfecha">Fecha</string>
	<string name="lbltitulofactura">Ingrese datos compra</string>
	<string name="lbldocumento">Documento</string>
	<string name="lblpago">Pago</string>
	<string name="lblAgreguedatosdeitem">Agregue datos de item</string>
	<string name="lblIngresepreciobruto">Ingrese precio bruto</string>
	<string name="stringtvactividad">Actividad:</string>
	<string name="stringtvactividad_id_actividad">Actividad:</string>
	<string name="stringtvaddress_format">Address format:</string>
	<string name="stringtvafectoiva_actividad">Afectoiva actividad:</string>
	<string name="stringtvalcance_empresa">Comuna:</string>
	<string name="stringtvalto_cm">Alto cm:</string>
	<string name="stringtvam_ancho">Am ancho:</string>
	<string name="stringtvam_fondo">Am fondo:</string>
	<string name="stringtvam_largo">Am largo:</string>
	<string name="stringtvancho_cm">Ancho cm:</string>
	<string name="stringtvanno_fecha_venta">Anno fecha venta:</string>
	<string name="stringtvano_factura">Ano factura:</string>
	<string name="stringtvano_fecha_nacimiento">Ano fecha nacimiento:</string>
	<string name="stringtvapellido_cliente">Apellido cliente:</string>
	<string name="stringtvapellido_persona">Apellido persona:</string>
	<string name="stringtvarea_actividad">Area actividad:</string>
	<string name="stringtvcalle_id_calle">Calle:</string>
	<string name="stringtvcantidad">Cantidad:</string>
	<string name="stringtvcantidad_carro">Cantidad carro:</string>
	<string name="stringtvcantidad_mayor">Cantidad mayor:</string>
	<string name="stringtvcaracteristica">Caracteristica:</string>
	<string name="stringtvcargo_contacto_empresa">Cargo contacto:</string>
	<string name="stringtvcarne_empresa_id_carne_empresa">Carne empresa:</string>
	<string name="stringtvcarro_compras_id_carro_compras">Carro compras:</string>
	<string name="stringtvcategoria_actividad">Categoria actividad:</string>
	<string name="stringtvcategoria_empresa_id_categoria_empresa">Categoria empresa:</string>
	<string name="stringtvcategoria_id_categoria">Categoria:</string>
	<string name="stringtvcelular">Celular:</string>
	<string name="stringtvclase_producto">Clase producto:</string>
	<string name="stringtvclave">Clave:</string>
	<string name="stringtvclave_usuario">Clave usuario:</string>
	<string name="stringtvcliente_empresa_id_cliente_empresa">Cliente empresa:</string>
	<string name="stringtvcliente_id_cliente">Cliente:</string>
	<string name="stringtvcodigo_actividad">Codigo actividad:</string>
	<string name="stringtvcodigo_comuna">Codigo comuna:</string>
	<string name="stringtvcodigo_producto">Codigo producto:</string>
	<string name="stringtvcodigo_provincia">Codigo provincia:</string>
	<string name="stringtvcodigo_region">Codigo region:</string>
	<string name="stringtvcomision_tipo_pago">Comision tipo pago:</string>
	<string name="stringtvcomuna_id_comuna">Comuna:</string>
	<string name="stringtvcontenido">Contenido:</string>
	<string name="stringtvcontenido_unidad">Contenido unidad:</string>
	<string name="stringtvcontenido_unidad_medida_id_contenido_unidad_medida">Contenido unidad medida:</string>
	<string name="stringtvdate">Date:</string>
	<string name="stringtvdefault_ubicacion">Default ubicacion:</string>
	<string name="stringtvdescripcion_producto">Descripcion producto:</string>
	<string name="stringtvdescripcion_subcategoria">Descripcion subcategoria:</string>
	<string name="stringtvdescuento_promocion">Descuento promocion:</string>
	<string name="stringtvdia_factura">Dia factura:</string>
	<string name="stringtvdia_fecha_nacimiento">Dia fecha nacimiento:</string>
	<string name="stringtvdia_fecha_venta">Dia fecha venta:</string>
	<string name="stringtvdigito_verificador">Digito verificador:</string>
	<string name="stringtvdigito_verificador_empresa">Digito verificador empresa:</string>
	<string name="stringtvdireccion">Direccion:</string>
	<string name="stringtvdireccion_alternativa">Direccion alternativa:</string>
	<string name="stringtvdisponible_internet_actividad">Disponible internet actividad:</string>
	<string name="stringtvedad">Edad:</string>
	<string name="stringtvemail">Email:</string>
	<string name="stringtvemail_cliente_empresa">Email cliente empresa:</string>
	<string name="stringtvemail_empresa">Email empresa:</string>
	<string name="stringtvemail_user">Email user:</string>
	<string name="stringtvempresa_id_empre">Empresa:</string>
	<string name="stringtvempresa_id_empresa">Empresa:</string>
	<string name="stringtvempresa_id_empresa1">Empresa:</string>
	<string name="stringtvenviado">Enviado:</string>
	<string name="stringtveu_ancho">Eu ancho:</string>
	<string name="stringtveu_fondo">Eu fondo:</string>
	<string name="stringtveu_largo">Eu largo:</string>
	<string name="stringtvfabricante">Fabricante:</string>
	<string name="stringtvfactura_id_factura">Factura:</string>
	<string name="stringtvfamilia_necesidad_id_familia_necesidad">Familia necesidad:</string>
	<string name="stringtvfamilia_producto_id_familia_producto">Familia producto:</string>
	<string name="stringtvfecha_entrega">Fecha entrega:</string>
	<string name="stringtvfecha_gasto">Fecha gasto:</string>
	<string name="stringtvfondo_cm">Fondo cm:</string>
	<string name="stringtvformato_producto_id_formato_producto">Formato producto:</string>
	<string name="stringtvhora_entrega">Hora entrega:</string>
	<string name="stringtvhora_fecha_venta">Hora fecha venta:</string>
	<string name="stringtvhot">Hot:</string>
	<string name="stringtvid">Id:</string>
	<string name="stringtvid_actividad">Id actividad:</string>
	<string name="stringtvid_calle">Id calle:</string>
	<string name="stringtvid_caracteristica">Id caracteristica:</string>
	<string name="stringtvid_carne_empresa">Id carne empresa:</string>
	<string name="stringtvid_carro_compras">Id carro compras:</string>
	<string name="stringtvid_carro_venta">Id carro venta:</string>
	<string name="stringtvid_categoria">Id categoria:</string>
	<string name="stringtvid_categoria_empresa">Id categoria empresa:</string>
	<string name="stringtvid_cliente">Id cliente:</string>
	<string name="stringtvid_cliente_empresa">Id cliente empresa:</string>
	<string name="stringtvid_comuna">Id comuna:</string>
	<string name="stringtvid_contenido_unidad_medida">Id contenido unidad medida:</string>
	<string name="stringtvid_empresa">Id empresa:</string>
	<string name="stringtvid_envio">Id envio:</string>
	<string name="stringtvid_factura">Id factura:</string>
	<string name="stringtvid_familia_necesidad">Id familia necesidad:</string>
	<string name="stringtvid_familia_producto">Id familia producto:</string>
	<string name="stringtvid_formato_producto">Id formato producto:</string>
	<string name="stringtvid_gasto">Id gasto:</string>
	<string name="stringtvid_imagenprod">Id imagenprod:</string>
	<string name="stringtvid_impuesto">Id impuesto:</string>
	<string name="stringtvid_itemfactura">Id itemfactura:</string>
	<string name="stringtvid_pais">Id pais:</string>
	<string name="stringtvid_persona">Id persona:</string>
	<string name="stringtvid_precio">Id precio:</string>
	<string name="stringtvid_producto">Id producto:</string>
	<string name="stringtvid_provincia">Id provincia:</string>
	<string name="stringtvid_talla">Id talla:</string>
	<string name="stringtvlinea_producto">Linea producto:</string>
	<string name="stringtvmarca_producto">Marca producto:</string>
	<string name="stringtvmodelo_producto">Modelo producto:</string>
	<string name="stringtvnombre_producto">Nombre producto:</string>
	<string name="stringtvnumero_serie">Numero serie:</string>
	<string name="stringtvnum_ancho">Num ancho:</string>
	<string name="stringtvnum_fondo">Num fondo:</string>
	<string name="stringtvnum_largo">Num largo:</string>
	<string name="stringtvpeso_neto">Peso neto:</string>
	<string name="stringtvproducto_id_producto">Producto:</string>
	<string name="stringtvSKU">SKU:</string>
	<string name="stringtvsubcategoria_id_subcategoria">Subcategoria:</string>
	<string name="stringtvtipo_producto_id_tipo_producto">Tipo producto:</string>
	<string name="stringtvunidad_minima">Unidad minima:</string>
</resources>