<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<TableRow
			android:id="@+id/trid_talla"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvid_talla"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvid_talla"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etid_talla"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="number">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/tram_largo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvam_largo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvam_largo"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etam_largo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="number">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/tram_ancho"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvam_ancho"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvam_ancho"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etam_ancho"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/tram_fondo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvam_fondo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvam_fondo"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etam_fondo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/treu_largo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tveu_largo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtveu_largo"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/eteu_largo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/treu_ancho"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tveu_ancho"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtveu_ancho"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/eteu_ancho"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/treu_fondo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tveu_fondo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtveu_fondo"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/eteu_fondo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/trnum_largo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvnum_largo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvnum_largo"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etnum_largo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/trnum_ancho"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvnum_ancho"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvnum_ancho"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etnum_ancho"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/trnum_fondo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvnum_fondo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvnum_fondo"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<EditText
					android:id="@+id/etnum_fondo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10" 
					android:inputType="text">
				</EditText>
		</TableRow>
		<TableRow
			android:id="@+id/trproducto_id_producto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
				<TextView
					android:id="@+id/tvproducto_id_producto"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stringtvproducto_id_producto"
					android:textAppearance="?android:attr/textAppearanceSmall" />
				
				<Spinner
					android:id="@+id/spproducto_id_producto"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
		</TableRow>
    </TableLayout>
</ScrollView>